--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Local .terraform directories
 **/.terraform/*
+*.vscode
 
 # .tfstate files
 *.tfstate
 *.tfstate.*
+*.terraform.lock*
 
 # Crash log files
 crash.log
